--- a/src/css/sketchpad.css
+++ b/src/css/sketchpad.css
@@ -6,6 +6,7 @@
 
 .drawing-box {
     display: flex;
+    max-width: 960px;
     flex-wrap: wrap;
     margin: 10px 20px;
     border: solid 2px black;
@@ -18,4 +19,101 @@
 
 .drawn {
     background-color: black;
+}
+
+
+.modal {
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place relative to the viewport */
+    z-index: 1000;
+    /* Sit on top of everything */
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    background-color: rgba(0, 0, 0, 0.6);
+    /* Black w/ more opacity */
+    /* Flexbox for centering */
+    justify-content: center;
+    /* Center horizontally */
+    align-items: center;
+    /* Center vertically */
+    overflow: auto;
+    /* Enable scroll if content is too big */
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    /* Center the modal content */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    /* Could be more specific, e.g., 500px */
+    max-width: 500px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    text-align: center;
+}
+
+.modal-header {
+    padding: 10px 0;
+    border-bottom: 1px solid #eee;
+    margin-bottom: 20px;
+}
+
+.modal-header h2 {
+    margin: 0;
+    font-size: 1.5em;
+}
+
+.modal-body label {
+    display: block;
+    margin-bottom: 8px;
+    font-weight: bold;
+}
+
+.modal-body input[type="number"] {
+    width: 200px;
+    /* Account for padding */
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    /* Include padding in width calculation */
+}
+
+.modal-footer button {
+    background-color: #007bff;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1em;
+    transition: background-color 0.3s ease;
+}
+
+.modal-footer button:hover {
+    background-color: #0056b3;
+}
+
+/* The Close Button */
+.close-button {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.close-button:hover,
+.close-button:focus {
+    color: black;
+    text-decoration: none;
 }
