--- a/src/css/sketchpad.css
+++ b/src/css/sketchpad.css
@@ -8,7 +8,7 @@
     display: flex;
     max-width: 960px;
     flex-wrap: wrap;
-    margin: 10px 20px;
+    margin: 10px auto;
     border: solid 2px black;
 }
 
